Centered the submit button

--- a/Field Trip.html
+++ b/Field Trip.html
@@ -17,20 +17,31 @@
         <form method="post">
             <h2 class="text-center bounce animated">Field Trip</h2>
             <div class="form-group">
-                <h5 class="text-capitalize" data-bs-hover-animate="flash">Full Name:</h5><input class="border rounded-pill shadow-sm form-control" type="text" name="Full name" placeholder="Full name" required="">
+                <h5 class="text-capitalize" data-bs-hover-animate="flash">Full Name:</h5><input
+                    class="border rounded-pill shadow-sm form-control" type="text" name="Full name"
+                    placeholder="Full name" required="">
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Email:</h5><input class="border rounded-pill shadow-sm form-control is-invalid" type="email" name="email" placeholder="Email" required=""><small class="form-text text-danger" id="mail_error">Please enter a correct email address.</small>
+                <h5 data-bs-hover-animate="flash">Email:</h5><input
+                    class="border rounded-pill shadow-sm form-control is-invalid" type="email" name="email"
+                    placeholder="Email" required=""><small class="form-text text-danger" id="mail_error">Please enter a
+                    correct email address.</small>
             </div>
             <div class="form-group">
                 <h5 class="text-left" data-bs-hover-animate="flash">Phone number:</h5>
-                <h6 class="text-black-50"><em>Active On Whatsapp</em><br></h6><input class="border rounded-pill shadow-sm form-control" type="tel" name="phone number" placeholder="Phone Number" required=""><small class="form-text text-danger" id="phone_error">Please enter a correct Phone Number</small>
+                <h6 class="text-black-50"><em>Active On Whatsapp</em><br></h6><input
+                    class="border rounded-pill shadow-sm form-control" type="tel" name="phone number"
+                    placeholder="Phone Number" required=""><small class="form-text text-danger" id="phone_error">Please
+                    enter a correct Phone Number</small>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Facebook account:</h5><input class="border rounded-pill shadow-sm form-control" type="Facebook" name="Facebook account" placeholder="URL" required="">
+                <h5 data-bs-hover-animate="flash">Facebook account:</h5><input
+                    class="border rounded-pill shadow-sm form-control" type="Facebook" name="Facebook account"
+                    placeholder="URL" required="">
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">University:</h5><select class="border rounded-pill shadow-sm form-control" required="">
+                <h5 data-bs-hover-animate="flash">University:</h5><select
+                    class="border rounded-pill shadow-sm form-control" required="">
                     <option value="Ain Shams ">Ain Shams </option>
                     <option value="Cairo ">Cairo </option>
                     <option value="Helwan ">Helwan </option>
@@ -54,7 +65,8 @@
                 </select>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">College:</h5><select class="border rounded-pill shadow-sm form-control" required="">
+                <h5 data-bs-hover-animate="flash">College:</h5><select
+                    class="border rounded-pill shadow-sm form-control" required="">
                     <option value="Engineering">Engineering</option>
                     <option value="Computer Science">Computer Science</option>
                     <option value="Commerce">Commerce</option>
@@ -73,17 +85,24 @@
                 </select>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Department:</h5><input class="border rounded-pill shadow-sm form-control" type="Facebook" name="Department" placeholder="Department" required="">
+                <h5 data-bs-hover-animate="flash">Department:</h5><input
+                    class="border rounded-pill shadow-sm form-control" type="Facebook" name="Department"
+                    placeholder="Department" required="">
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Academic Year:</h5><input class="border rounded-pill shadow-sm form-control" type="Facebook" name="Academic Year" placeholder="Academic Year" required="">
+                <h5 data-bs-hover-animate="flash">Academic Year:</h5><input
+                    class="border rounded-pill shadow-sm form-control" type="Facebook" name="Academic Year"
+                    placeholder="Academic Year" required="">
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Last GPA or Grade:</h5><input class="border rounded-pill shadow-sm form-control" type="Facebook" name="Last Grade" placeholder="Last Grade" required="">
+                <h5 data-bs-hover-animate="flash">Last GPA or Grade:</h5><input
+                    class="border rounded-pill shadow-sm form-control" type="Facebook" name="Last Grade"
+                    placeholder="Last Grade" required="">
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Trips:</h5>
-                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6><select class="border rounded shadow-sm form-control" id="trip" required="" multiple="">
+                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6><select
+                    class="border rounded shadow-sm form-control" id="trip" required="" multiple="">
                     <option value="Google">Google</option>
                     <option value="Micosoft">Micosoft</option>
                     <option value="Hp">Hp</option>
@@ -91,15 +110,18 @@
                 </select>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Any Comment?</h5><textarea class="border rounded form-control" id="message" name="message" placeholder="Any Comment" rows="14"></textarea>
+                <h5 data-bs-hover-animate="flash">Any Comment?</h5><textarea class="border rounded form-control"
+                    id="message" name="message" placeholder="Any Comment" rows="14"></textarea>
             </div>
-            <div class="form-group"><button class="btn btn-primary border rounded-pill" type="submit">Submit</button></div>
+            <div class="form-group text-center"><button class="btn btn-primary border rounded-pill"
+                    type="submit">Submit</button></div>
         </form>
     </div>
     <div class="Req-Denied">
         <div class="container">
             <div class="intro">
-                <p class="text-center text-dark bounce animated">Sorry We Reached out The Maximum of Applicants<br>😢<br></p>
+                <p class="text-center text-dark bounce animated">Sorry We Reached out The Maximum of
+                    Applicants<br>😢<br></p>
             </div>
         </div>
     </div>
