--- a/Submission.html
+++ b/Submission.html
@@ -16,7 +16,10 @@
     <div class="submit-sucess">
         <div class="container">
             <div class="intro">
-                <p class="text-center text-success" data-aos="fade-left" data-aos-duration="800">Thank you for filling out your information!<br>We will get in touch with you for more details about the event as soon as possible.<br>So, keep waiting for us.<br>And if you have any questions, don’t hesitate to ask us through our page messages.<br>😍<br><br></p>
+                <p class="text-center text-success" data-aos="fade-left" data-aos-duration="800">Thank you for filling
+                    out your information!<br>We will get in touch with you for more details about the event as soon as
+                    possible.<br>So, keep waiting for us.<br>And if you have any questions, don’t hesitate to ask us
+                    through our page messages.<br>😍<br><br></p>
             </div>
         </div>
     </div>
