--- a/Field Trip.html
+++ b/Field Trip.html
@@ -19,29 +19,31 @@
             <div class="form-group">
                 <h5 class="text-capitalize" data-bs-hover-animate="flash">Full Name:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="text" name="Full name"
-                    placeholder="Full name" required="">
+                    placeholder="Full name" required="" id="name"><small class="form-text text-danger" id="name_error">Please
+                    enter a correct Name</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Email:</h5><input
                     class="border rounded-pill shadow-sm form-control is-invalid" type="email" name="email"
-                    placeholder="Email" required=""><small class="form-text text-danger" id="mail_error">Please enter a
+                    placeholder="Email" required="" id="email"><small class="form-text text-danger" id="mail_error">Please enter a
                     correct email address.</small>
             </div>
             <div class="form-group">
                 <h5 class="text-left" data-bs-hover-animate="flash">Phone number:</h5>
                 <h6 class="text-black-50"><em>Active On Whatsapp</em><br></h6><input
                     class="border rounded-pill shadow-sm form-control" type="tel" name="phone number"
-                    placeholder="Phone Number" required=""><small class="form-text text-danger" id="phone_error">Please
+                    placeholder="Phone Number" required="" id="phone"><small class="form-text text-danger" id="phone_error">Please
                     enter a correct Phone Number</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Facebook account:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="Facebook" name="Facebook account"
-                    placeholder="URL" required="">
+                    placeholder="URL" required="" id="Facebook"><small class="form-text text-danger" id="phone_error">Please
+                    enter a correct Facebook Account URL</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">University:</h5><select
-                    class="border rounded-pill shadow-sm form-control" required="">
+                    class="border rounded-pill shadow-sm form-control" required="" id="university">
                     <option value="Ain Shams ">Ain Shams </option>
                     <option value="Cairo ">Cairo </option>
                     <option value="Helwan ">Helwan </option>
@@ -66,7 +68,7 @@
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">College:</h5><select
-                    class="border rounded-pill shadow-sm form-control" required="">
+                    class="border rounded-pill shadow-sm form-control" required="" id="college">
                     <option value="Engineering">Engineering</option>
                     <option value="Computer Science">Computer Science</option>
                     <option value="Commerce">Commerce</option>
@@ -87,22 +89,24 @@
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Department:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="Facebook" name="Department"
-                    placeholder="Department" required="">
+                    placeholder="Department" required="" id="department">
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Academic Year:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="Facebook" name="Academic Year"
-                    placeholder="Academic Year" required="">
+                    placeholder="Academic Year" required="" id="academic_year"><small class="form-text text-danger" id="academic_year_error">Please
+                    enter a correct Academic Year</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Last GPA or Grade:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="Facebook" name="Last Grade"
-                    placeholder="Last Grade" required="">
+                    placeholder="Last Grade" required="" id="last_GPA"><small class="form-text text-danger" id="GPA_error">Please
+                    enter a correct GPA</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Trips:</h5>
                 <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6><select
-                    class="border rounded shadow-sm form-control" id="trip" required="" multiple="">
+                    class="border rounded shadow-sm form-control" id="trip" required="" multiple="" id="trips">
                     <option value="Google">Google</option>
                     <option value="Micosoft">Micosoft</option>
                     <option value="Hp">Hp</option>
@@ -114,7 +118,7 @@
                     id="message" name="message" placeholder="Any Comment" rows="14"></textarea>
             </div>
             <div class="form-group text-center"><button class="btn btn-primary border rounded-pill"
-                    type="submit">Submit</button></div>
+                    type="submit" id="submit">Submit</button></div>
         </form>
     </div>
     <div class="Req-Denied">
@@ -129,6 +133,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="assets/js/Field Trip.js"></script>
 </body>
 
 </html>
