Edit the validation

--- a/Field Trip.html
+++ b/Field Trip.html
@@ -93,14 +93,14 @@
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Academic Year:</h5><input
-                    class="border rounded-pill shadow-sm form-control" type="Facebook" name="Academic Year"
-                    placeholder="Academic Year" required="" id="academic_year"><small class="form-text text-danger" id="academic_year_error">Please
+                    class="border rounded-pill shadow-sm form-control" type="Academic Year" name="Academic Year"
+                    placeholder="eg: 4" required="" id="academic_year"><small class="form-text text-danger" id="academic_year_error">Please
                     enter a correct Academic Year</small>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Last GPA or Grade:</h5><input
-                    class="border rounded-pill shadow-sm form-control" type="Facebook" name="Last Grade"
-                    placeholder="Last Grade" required="" id="last_GPA"><small class="form-text text-danger" id="GPA_error">Please
+                <h5 data-bs-hover-animate="flash">Last GPA:</h5><input
+                    class="border rounded-pill shadow-sm form-control" type="Last Grade" name="Last Grade"
+                    placeholder="Last GPA" required="" id="last_GPA"><small class="form-text text-danger" id="GPA_error">Please
                     enter a correct GPA</small>
             </div>
             <div class="form-group">
