--- a/Field Trip.html
+++ b/Field Trip.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Field Trip</title>
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Field%20Trip.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -15,30 +16,38 @@
 <body>
     <div class="contact-clean">
         <form method="post">
-            <h2 class="text-center bounce animated">Field Trip</h2>
+            <div class="d-flex justify-content-center align-items-center" style="margin-bottom: 20px;">
+                <img src="logo.png" alt="EP Logo" width="70">
+                <h2 class="text-center bounce animated">Field Trip</h2>
+            </div>
+
             <div class="form-group">
                 <h5 class="text-capitalize" data-bs-hover-animate="flash">Full Name:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="text" name="Full name"
-                    placeholder="Full name" required="" id="name"><small class="form-text text-danger" id="name_error">Please
+                    placeholder="Full name" required="" id="name"><small class="form-text text-danger"
+                    id="name_error">Please
                     enter a correct Name</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Email:</h5><input
                     class="border rounded-pill shadow-sm form-control is-invalid" type="email" name="email"
-                    placeholder="Email" required="" id="email"><small class="form-text text-danger" id="mail_error">Please enter a
+                    placeholder="Email" required="" id="email"><small class="form-text text-danger"
+                    id="mail_error">Please enter a
                     correct email address.</small>
             </div>
             <div class="form-group">
                 <h5 class="text-left" data-bs-hover-animate="flash">Phone number:</h5>
                 <h6 class="text-black-50"><em>Active On Whatsapp</em><br></h6><input
                     class="border rounded-pill shadow-sm form-control" type="tel" name="phone number"
-                    placeholder="Phone Number" required="" id="phone"><small class="form-text text-danger" id="phone_error">Please
+                    placeholder="Phone Number" required="" id="phone"><small class="form-text text-danger"
+                    id="phone_error">Please
                     enter a correct Phone Number</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Facebook account:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="Facebook" name="Facebook account"
-                    placeholder="URL" required="" id="Facebook"><small class="form-text text-danger" id="phone_error">Please
+                    placeholder="URL" required="" id="Facebook"><small class="form-text text-danger"
+                    id="phone_error">Please
                     enter a correct Facebook Account URL</small>
             </div>
             <div class="form-group">
@@ -94,19 +103,21 @@
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Academic Year:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="Academic Year" name="Academic Year"
-                    placeholder="eg: 4" required="" id="academic_year"><small class="form-text text-danger" id="academic_year_error">Please
+                    placeholder="eg: 4" required="" id="academic_year"><small class="form-text text-danger"
+                    id="academic_year_error">Please
                     enter a correct Academic Year</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Last GPA:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="Last Grade" name="Last Grade"
-                    placeholder="Last GPA" required="" id="last_GPA"><small class="form-text text-danger" id="GPA_error">Please
+                    placeholder="Last GPA" required="" id="last_GPA"><small class="form-text text-danger"
+                    id="GPA_error">Please
                     enter a correct GPA</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Trips:</h5>
-                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6><select
-                    class="border rounded shadow-sm form-control" id="trip" required="" multiple="" id="trips">
+                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6>
+                <select class="border rounded shadow-sm form-control" required multiple id="trips">
                     <option value="Google">Google</option>
                     <option value="Micosoft">Micosoft</option>
                     <option value="Hp">Hp</option>
@@ -117,18 +128,18 @@
                 <h5 data-bs-hover-animate="flash">Any Comment?</h5><textarea class="border rounded form-control"
                     id="message" name="message" placeholder="Any Comment" rows="14"></textarea>
             </div>
-            <div class="form-group text-center"><button class="btn btn-primary border rounded-pill"
-                    type="submit" id="submit">Submit</button></div>
+            <div class="form-group text-center"><button class="btn btn-primary border rounded-pill" type="submit"
+                    id="submit">Submit</button></div>
         </form>
     </div>
-    <div class="Req-Denied">
+    <!-- <div class="Req-Denied">
         <div class="container">
             <div class="intro">
                 <p class="text-center text-dark bounce animated">Sorry We Reached out The Maximum of
                     Applicants<br>😢<br></p>
             </div>
         </div>
-    </div>
+    </div> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
