--- a/Field Trip.html
+++ b/Field Trip.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="contact-clean">
-        <form method="post">
+        <form method="post" id="myForm">
             <div class="d-flex justify-content-center align-items-center" style="margin-bottom: 20px;">
                 <img src="logo.png" alt="EP Logo" width="70">
                 <h2 class="text-center bounce animated">Field Trip</h2>
@@ -52,7 +52,7 @@
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">University:</h5><select
-                    class="border rounded-pill shadow-sm form-control" required="" id="university">
+                    class="border rounded-pill shadow-sm form-control" required="" id="university" name="university">
                     <option value="Ain Shams ">Ain Shams </option>
                     <option value="Cairo ">Cairo </option>
                     <option value="Helwan ">Helwan </option>
@@ -77,7 +77,7 @@
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">College:</h5><select
-                    class="border rounded-pill shadow-sm form-control" required="" id="college">
+                    class="border rounded-pill shadow-sm form-control" required="" id="college" name="college">
                     <option value="Engineering">Engineering</option>
                     <option value="Computer Science">Computer Science</option>
                     <option value="Commerce">Commerce</option>
@@ -98,7 +98,8 @@
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Department:</h5><input
                     class="border rounded-pill shadow-sm form-control" type="Facebook" name="Department"
-                    placeholder="Department" required="" id="department">
+                    placeholder="Department" required="" id="department"><small class="form-text text-danger" id="department_error">Please
+                    enter a correct Department</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Academic Year:</h5><input
@@ -115,14 +116,21 @@
                     enter a correct GPA</small>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Trips:</h5>
-                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6>
-                <select class="border rounded shadow-sm form-control" required multiple id="trips">
+               <h5 data-bs-hover-animate="flash">Trips:</h5>
+                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6><select
+                    class="border rounded shadow-sm form-control" id="trip" required="" multiple="" name="trips">
                     <option value="Google">Google</option>
                     <option value="Micosoft">Micosoft</option>
                     <option value="Hp">Hp</option>
                     <option value="Giza System">Giza System</option>
+
+                    <!--Hiddin Input Fields To Send Their Values To The Sheet-->
+                    <input class="saved_data"  name="Google" value="">
+                    <input class="saved_data"  name="Microsoft" value="">
+                    <input class="saved_data"  name="Hp" value="">
+                    <input class="saved_data"  name="Giza System" value="">
                 </select>
+                <small class="form-text text-danger" id="GPA_error">You Have To Choose At Least 1 Trip</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Any Comment?</h5><textarea class="border rounded form-control"
@@ -144,6 +152,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous">
+    </script>
     <script src="assets/js/Field Trip.js"></script>
 </body>
 
