--- a/Field Trip.html
+++ b/Field Trip.html
@@ -110,7 +110,7 @@
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Last GPA:</h5><input
-                    class="border rounded-pill shadow-sm form-control" type="Last Grade" name="Last Grade"
+                    class="border rounded-pill shadow-sm form-control" type="Last Grade" name="Last GPA"
                     placeholder="Last GPA" required="" id="last_GPA"><small class="form-text text-danger"
                     id="GPA_error">Please
                     enter a correct GPA</small>
@@ -124,11 +124,6 @@
                     <option value="Hp">Hp</option>
                     <option value="Giza System">Giza System</option>
 
-                    <!--Hiddin Input Fields To Send Their Values To The Sheet-->
-                    <input class="saved_data"  name="Google" value="">
-                    <input class="saved_data"  name="Microsoft" value="">
-                    <input class="saved_data"  name="Hp" value="">
-                    <input class="saved_data"  name="Giza System" value="">
                 </select>
                 <small class="form-text text-danger" id="GPA_error">You Have To Choose At Least 1 Trip</small>
             </div>
@@ -140,7 +135,7 @@
                     id="submit">Submit</button></div>
         </form>
     </div>
-    <!-- <div class="Req-Denied">
+    <div class="Req-Denied">
         <div class="container">
             <div class="intro">
                 <p class="text-center text-dark bounce animated">Sorry We Reached out The Maximum of
