--- a/Field Trip.html
+++ b/Field Trip.html
@@ -117,12 +117,9 @@
             </div>
             <div class="form-group">
                <h5 data-bs-hover-animate="flash">Trips:</h5>
-                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6><select
-                    class="border rounded shadow-sm form-control" id="trip" required="" multiple="" name="trips">
-                    <option value="Google">Google</option>
-                    <option value="Micosoft">Micosoft</option>
-                    <option value="Hp">Hp</option>
-                    <option value="Giza System">Giza System</option>
+                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6>
+                <select class="border rounded shadow-sm form-control" id="trip" required="" multiple="" name="trips">
+
 
                 </select>
                 <small class="form-text text-danger" id="GPA_error">You Have To Choose At Least 1 Trip</small>
@@ -135,9 +132,9 @@
                     id="submit">Submit</button></div>
         </form>
     </div>
-    <div class="Req-Denied">
+    <div class="Req-Denied" >
         <div class="container">
-            <div class="intro">
+            <div class="intro" id="intro">
                 <p class="text-center text-dark bounce animated">Sorry We Reached out The Maximum of
                     Applicants<br>😢<br></p>
             </div>
@@ -147,11 +144,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script
-        src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-        crossorigin="anonymous">
-    </script>
     <script src="assets/js/Field Trip.js"></script>
 </body>
 
