Created The Preloader

--- a/Field Trip.html
+++ b/Field Trip.html
@@ -14,6 +14,9 @@
 </head>
 
 <body>
+    <div class="loader">
+        <img src="Ajax_loader_metal_512.gif" id="loaderImg">
+    </div>
     <div class="contact-clean">
         <form method="post" id="myForm">
             <div class="d-flex justify-content-center align-items-center" style="margin-bottom: 20px;">
