put the imgs in assets folder

--- a/Field Trip.html
+++ b/Field Trip.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Field Trip</title>
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="assets/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Field%20Trip.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -15,12 +15,12 @@
 
 <body>
     <div class="loader">
-        <img src="Ajax_loader_metal_512.gif" id="loaderImg">
+        <img src="assets/img/loader.gif" id="loaderImg">
     </div>
     <div class="contact-clean">
         <form method="post" id="myForm">
             <div class="d-flex justify-content-center align-items-center" style="margin-bottom: 20px;">
-                <img src="logo.png" alt="EP Logo" width="70">
+                <img src="assets/img/logo.png" alt="EP Logo" width="70">
                 <h2 class="text-center bounce animated">Field Trip</h2>
             </div>
 
