--- a/Field Trip.html
+++ b/Field Trip.html
@@ -112,20 +112,10 @@
                     enter a correct Academic Year</small>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">Last GPA:</h5><input
-                    class="border rounded-pill shadow-sm form-control" type="Last Grade" name="Last GPA"
-                    placeholder="Last GPA" required="" id="last_GPA"><small class="form-text text-danger"
-                    id="GPA_error">Please
-                    enter a correct GPA</small>
-            </div>
-            <div class="form-group">
                <h5 data-bs-hover-animate="flash">Trips:</h5>
-                <h6 class="text-black-50"><em>you can choose more than one trip</em><br></h6>
-                <select class="border rounded shadow-sm form-control" id="trip" required="" multiple="" name="trips">
-
-
+                <select class="border rounded-pill shadow-sm form-control" id="trip" required="" name="trips">
                 </select>
-                <small class="form-text text-danger" id="GPA_error">You Have To Choose At Least 1 Trip</small>
+                <small class="form-text text-danger" id="GPA_error">You Have To Choose a Trip</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Any Comment?</h5><textarea class="border rounded form-control"
