--- a/index.html
+++ b/index.html
@@ -79,24 +79,13 @@
                 </select>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">College:</h5><select
-                    class="border rounded-pill shadow-sm form-control" required="" id="college" name="college">
-                    <option value="Engineering">Engineering</option>
-                    <option value="Computer Science">Computer Science</option>
-                    <option value="Commerce">Commerce</option>
-                    <option value="Law">Law</option>
-                    <option value="medicine">medicine</option>
-                    <option value="Economics and political science">Economics and political science</option>
-                    <option value="Applied arts">Applied arts</option>
-                    <option value="Pharmacy">Pharmacy</option>
-                    <option value="Linguistics">Linguistics</option>
-                    <option value="Education">Education</option>
-                    <option value="Science">Science</option>
-                    <option value="Fine arts">Fine arts</option>
-                    <option value="Mass communication">Mass communication</option>
-                    <option value="Arts">Arts</option>
-                    <option value="Other">Other</option>
-                </select>
+                <h5 data-bs-hover-animate="flash">College:</h5>
+                <input
+                    class="border rounded-pill shadow-sm form-control" type="Facebook" name="college"
+                    placeholder="College" required="" id="college">
+                    <small class="form-text text-danger" id="department_error">Please
+                    enter a correct College</small>
+                
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">Department:</h5><input
