--- a/index.html
+++ b/index.html
@@ -54,29 +54,12 @@
                     enter a correct Facebook Account URL</small>
             </div>
             <div class="form-group">
-                <h5 data-bs-hover-animate="flash">University:</h5><select
-                    class="border rounded-pill shadow-sm form-control" required="" id="university" name="university">
-                    <option value="Ain Shams ">Ain Shams </option>
-                    <option value="Cairo ">Cairo </option>
-                    <option value="Helwan ">Helwan </option>
-                    <option value="Helwan - Matarya Branch ">Helwan - Matarya Branch </option>
-                    <option value="Shoubra ">Shoubra </option>
-                    <option value="ECU ">ECU </option>
-                    <option value="October ">October </option>
-                    <option value="GUC ">GUC </option>
-                    <option value="AUC ">AUC </option>
-                    <option value=" Al-azhar "> Al-azhar </option>
-                    <option value="MSA ">MSA </option>
-                    <option value="Future ">Future </option>
-                    <option value="BUE">BUE</option>
-                    <option value="Badr">Badr</option>
-                    <option value="AAST">AAST</option>
-                    <option value="MUST">MUST</option>
-                    <option value="Nile">Nile</option>
-                    <option value="CIC">CIC</option>
-                    <option value=" High institute of technology"> High institute of technology</option>
-                    <option value="Other">Other</option>
-                </select>
+                <h5 data-bs-hover-animate="flash">University:</h5>
+                <input
+                class="border rounded-pill shadow-sm form-control" type="Facebook" name="university"
+                placeholder="university" required="" id="university">
+                <small class="form-text text-danger" id="department_error">Please
+                enter a correct University</small>
             </div>
             <div class="form-group">
                 <h5 data-bs-hover-animate="flash">College:</h5>
